# javis-api

./: .gitignore  Dockerfile  alembic.ini  pyproject.toml
migration/: env.py
src/: const.py  database.py  main.py
src/models/: model_user.py
src/routers/: router_api.py
src/schemas/: schema_gpt.py
src/services/: service_gpt.py
